# CppExperiments

./: .gitignore  README.md  refs_ptrs.cpp  run_cpp.sh
Algorithms/: hello_world.cpp
BasicProj/: .gitignore  CMakeLists.txt  fibonachi.cpp
CMakeExperiments/: CMakeLists.txt
CPP_NOTES/: Some_try_parallel.cpp
Coursera/: containers.cpp  numbers2.cpp  quantity.cpp  run_cpp.sh  src1.cpp  vector5count.cpp
Coursera/executables/: Basics
CppCMakePr1/: CMakeLists.txt  main.cpp  sample
ERRORS_IN_CPP/: CMakeLists.txt  heap_fault.cpp  use_after_free.cpp
GradleCpp/: build.gradle  settings.gradle
MyMoney_APP/: CMakeLists.txt  Distance.cpp  MyMoney.cpp  main.cpp  main2.cpp  run.sh
OOP_Experiments/: CMakeLists.txt  main.cpp  myclass1.cpp  myclass1.h
OOP_Proj/: CMakeLists.txt  StdAlgorithmsMain.cpp  StdCollectionsMain.cpp  StdNumericsMain.cpp  StdStreamsMain.cpp
OOP_Proj/in_dir/: Planet.h
OPEN_MP/: open_mp.c  open_mp.cpp
PointersRefs/: main.cpp
QtProjects/: .gitignore
SIMP/: simp.cpp
SimpExpers/: google.crt  simp.cpp
Test1/: CMakeLists.txt  MyMoney.cpp  Test1  main.cpp  main2.cpp  main2.h
